--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ packaging/ios/install-root
 packaging/ios/Info.plist
 packaging/ios/Qt
 appdata/subsurface.appdata.xml
+_deploy_win32_ble
+mobile-widgets/qml/icons
+qt-mobile/qml/mobilecomponents
+debug
+googlemaps-plugin
+packaging/windows
